HelloUltraviolet/Fixtures/RejectedSource/FFI/BoundaryUnwindingNoAdditionalDiagnostics/Source/Main.uv
//! Rejected FFI specimen for boundary-unwinding diagnostic reuse.

[[export("C")]]
[[unwind("resume")]]
public procedure invalidBoundaryUnwindMode() -> i32 {
    return 0
}
